[Wandy] - #367: Corrects order of elements on mobile layout

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -44,18 +44,16 @@
 
 #home {
   #featured_1 {
-    @include media-query(THREE){
-      order: -10;
-    }
+    order: -10;
   }
 
   #featured_2 {
-    @include media-query(THREE){
-      order: -9;
-    }
+    order: -9;
   }
 
   #featured_3 {
+    order: -8;
+
     @include media-query(THREE){
       order: -7;
     }
@@ -68,6 +66,7 @@
   #featured_text_container {
     display: flex;
     flex-wrap: wrap;
+    order: -7;
 
     @include media-query(FOUR){
       width: 2 * $COLUMN-WIDTH;
